--- a/SalesWebMvc/SalesWebMvc/appsettings.json
+++ b/SalesWebMvc/SalesWebMvc/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SalesWebMvcContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMvcContext-c758ea68-b5da-4d95-bfc9-d883f29ccdfa;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
