--- a/SalesWebMvc/SalesWebMvc/appsettings.json
+++ b/SalesWebMvc/SalesWebMvc/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SalesWebMvcContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMvcContext-c758ea68-b5da-4d95-bfc9-d883f29ccdfa;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SalesWebMvcContext": "Server=localhost;userid=developer;password=1234567;database=saleswebmvcappdb"
   }
 }
